# kin_dyn_model

./: CMakeLists.txt  README.md  package.xml
include/dyn_model/: dyn_model.h
include/kin_dyn_model/: dyn_model.h  kin_model.h
include/kin_model/: kin_model.h
src/: dyn_model.cpp  kin_model.cpp
